TPs/TP5/Pilar2/infra/manifests/coordinador/coordinador-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coordinador-ingress
  namespace: blockchain
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - blockchain.34.23.224.114.nip.io
      secretName: coordinador-tls
  rules:
    - host: blockchain.34.23.224.114.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coordinador
                port:
                  number: 80
